--- a/AppTurismo/app/src/main/res/layout/activity_main.xml
+++ b/AppTurismo/app/src/main/res/layout/activity_main.xml
@@ -145,7 +145,7 @@
         android:textStyle="bold"
         />
 
-    <TextureView
+    <TextView
         android:id="@+id/tvtotalplan"
         android:layout_width="200dp"
         android:layout_height="50dp"
@@ -155,7 +155,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center">
 
         <Button
             android:text="Calcular"
@@ -174,6 +174,7 @@
         android:textAllCaps="false"
         android:backgroundTint="#056EC1"
         />
+    </LinearLayout>
 
 
 </LinearLayout>
