--- a/AppTurismo/app/src/main/res/layout/activity_main.xml
+++ b/AppTurismo/app/src/main/res/layout/activity_main.xml
@@ -150,6 +150,8 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         />
 
     <LinearLayout
