--- a/FinanciCom/FinanciCom/app/src/main/res/layout/activity_main.xml
+++ b/FinanciCom/FinanciCom/app/src/main/res/layout/activity_main.xml
@@ -4,24 +4,216 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/blue_main"
+    android:orientation="vertical">
 
+    <!--Bara de presentacion-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/red_present">
             <ImageView
                 android:src="@drawable/co"
-                android:layout_width="400px"
-                android:layout_height="500px"
+                android:layout_width="90sp"
+                android:layout_height="90sp"
+                android:layout_marginLeft="40sp"
                 />
+
             <TextView
+                android:layout_width="228dp"
+                android:layout_height="wrap_content"
                 android:text="@string/app_name"
+                android:textSize="42sp"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="10sp"
+            />
+    </LinearLayout>
+
+    <TextView
+        android:text="@string/Title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:layout_marginTop="6sp"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        />
+    <!--Fomulario-->
+    <LinearLayout
+        android:layout_width="350dp"
+        android:layout_height="60dp"
+        android:background="@color/gray_form"
+        android:layout_gravity="center"
+        android:layout_marginTop="20sp"
+        android:orientation="vertical">
+            <TextView
+                android:text="@string/textVarPrestamo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="40sp"
-
+                android:layout_marginLeft="11sp"
                 />
+            <EditText
+                android:id="@+id/etvarPrestamo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/baseline_attach_money_24"
+                android:inputType="number"
+                android:textColor="@color/black"
+                />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="350dp"
+        android:layout_height="60dp"
+        android:background="@color/gray_form"
+        android:layout_gravity="center"
+        android:layout_marginTop="20sp"
+        android:orientation="vertical">
+        <TextView
+            android:text="@string/textFecha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="11sp"
+            />
+        <EditText
+            android:id="@+id/etfecha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/baseline_calendar_month_24"
+            android:inputType="date"
+            android:textColor="@color/black"
+            />
+    </LinearLayout>
+
+    <!--Formularios desplegables-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="89dp"
+        android:layout_marginTop="25sp"
+        android:gravity="center">
+
+        <LinearLayout
+            android:layout_width="170dp"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="5sp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/textNumCuotas"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/spnumCuotas"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="170dp"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="5sp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/textTipoPrestamo"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/sptipoPrestamo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <!--Sesion de los botnones-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12sp"
+        android:gravity="center">
+
+        <Button
+            android:text="@string/calcular"
+            android:id="@+id/btncalcular"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:backgroundTint="@color/gree_btnCalculate"
+            android:layout_marginHorizontal="5sp"
+            />
+        <Button
+            android:text="@string/limpiar"
+            android:id="@+id/btnlimpiar"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:backgroundTint="@color/red_btnClear"
+            android:layout_marginHorizontal="5sp"
+            />
+    </LinearLayout>
+
+    <!--Imprimir el Valor de deuda-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12sp"
+        android:orientation="vertical">
+
+        <TextView
+            android:text="@string/textValorDeuda"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="26dp"
+            android:textColor="@color/white"
+            android:textAlignment="center"/>
+        <TextView
+            android:id="@+id/tvvalorDeuda"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:textSize="15dp"
+            android:textColor="@color/white"
+            android:textAlignment="center"/>
+    </LinearLayout>
+
+    <!--Imprimir el Valor de cuota-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12sp"
+        android:orientation="vertical"
+>
+
+        <TextView
+            android:text="@string/textValorCuota"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="26dp"
+            android:textColor="@color/white"
+            android:textAlignment="center"/>
+        <TextView
+            android:id="@+id/tvvalorCuota"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:textSize="15dp"
+            android:textColor="@color/white"
+            android:textAlignment="center"/>
     </LinearLayout>
 
 </LinearLayout>
