--- a/FinanciCom/FinanciCom/app/src/main/res/layout/activity_main.xml
+++ b/FinanciCom/FinanciCom/app/src/main/res/layout/activity_main.xml
@@ -12,23 +12,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/red_present">
+        android:background="@color/red_present"
+        android:gravity="center">
             <ImageView
                 android:src="@drawable/co"
-                android:layout_width="90sp"
+                android:layout_width="85sp"
                 android:layout_height="90sp"
-                android:layout_marginLeft="40sp"
+                android:layout_marginHorizontal="6sp"
                 />
 
-            <TextView
-                android:layout_width="228dp"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:textSize="42sp"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:layout_marginLeft="10sp"
-                android:layout_marginTop="10sp"
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="35sp"
+            android:textStyle="bold"
+
             />
     </LinearLayout>
 
@@ -39,12 +39,12 @@
         android:textColor="@color/white"
         android:textAlignment="center"
         android:layout_marginTop="6sp"
-        android:textSize="25sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         />
     <!--Fomulario-->
     <LinearLayout
-        android:layout_width="350dp"
+        android:layout_width="300dp"
         android:layout_height="60dp"
         android:background="@color/gray_form"
         android:layout_gravity="center"
@@ -68,7 +68,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="350dp"
+        android:layout_width="300dp"
         android:layout_height="60dp"
         android:background="@color/gray_form"
         android:layout_gravity="center"
@@ -98,7 +98,7 @@
         android:gravity="center">
 
         <LinearLayout
-            android:layout_width="170dp"
+            android:layout_width="140dp"
             android:layout_height="100dp"
             android:layout_marginHorizontal="5sp"
             android:orientation="vertical">
@@ -109,13 +109,14 @@
                 android:text="@string/textNumCuotas"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <Spinner
                 android:id="@+id/spnumCuotas"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -130,7 +131,7 @@
                 android:text="@string/textTipoPrestamo"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <Spinner
