FinanciCom/: Se modifico detalles minimos

--- a/FinanciCom/FinanciCom/app/src/main/res/layout/activity_main.xml
+++ b/FinanciCom/FinanciCom/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,13 @@
     android:background="@color/blue_main"
     android:orientation="vertical">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <!--Bara de presentacion-->
     <LinearLayout
         android:layout_width="match_parent"
@@ -198,8 +205,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12sp"
-        android:orientation="vertical"
->
+        android:orientation="vertical">
 
         <TextView
             android:text="@string/textValorCuota"
@@ -216,5 +222,7 @@
             android:textColor="@color/white"
             android:textAlignment="center"/>
     </LinearLayout>
+    </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
