--- a/FinanciCom/FinanciCom/app/src/main/res/values/colors.xml
+++ b/FinanciCom/FinanciCom/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red_present">#973333</color>
-    <color name="blue_main">#002BA2</color>
+    <color name="red_present">#631C1C</color>
+    <color name="blue_main">#2B57D3</color>
     <color name="gray_form">#B9B9B9</color>
     <color name="gree_btnCalculate">#53A82C</color>
     <color name="red_btnClear">#BE2D2D</color>
