--- a/AppVentas/app/src/main/res/layout/activity_main.xml
+++ b/AppVentas/app/src/main/res/layout/activity_main.xml
@@ -5,137 +5,163 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:background="@color/backgroundDefine">
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Actualizacion de vendedores"
-        android:layout_marginTop="40dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Identificación"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        />
-    <EditText
-        android:id="@+id/etident"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:hint="Identifiación"
-        android:gravity="center"
-        />
-    <EditText
-        android:id="@+id/etfullNombre"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:hint="Nombre completo"
-        android:gravity="center"
-        android:inputType="textPersonName"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Correo Electrónico"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        />
-    <EditText
-        android:id="@+id/etemail"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:hint="Correo Electrónico"
-        android:gravity="center"
-        android:inputType="textEmailAddress"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Contraseña"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        />
-    <EditText
-        android:id="@+id/etcontrasena"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:hint="Contraseña"
-        android:gravity="center"
-        android:inputType="textPassword"
-        />
-    <TextureView
-        android:id="@+id/tvmensaje"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nombre Completo"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="60dp"
-        >
-
-        <Button
-            android:id="@+id/btnguardar"
-            android:layout_width="150dp"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Guardar"
-            android:textAllCaps="false"
-            />
-        <Button
-            android:id="@+id/btnbuscar"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Buscar"
-            android:textAllCaps="false"
-            android:layout_marginLeft="10dp"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="10dp"
-        >
-        <Button
-            android:id="@+id/btnactualizar"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Actualizar"
-            android:textAllCaps="false"
-            />
-        <Button
-            android:id="@+id/btneliminar"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Eliminiar"
-            android:textAllCaps="false"
-            android:layout_marginLeft="10dp"
-            />
-    </LinearLayout>
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Actualizacion de vendedores"
+                android:layout_marginTop="40dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/colorTiltle"
+                android:textSize="20dp"
+                />
+
+            <!--Campo de identificación-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Identificación"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                />
+            <EditText
+                android:id="@+id/etident"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:hint="Identifiación"
+                android:gravity="center"
+                />
+
+            <!--Campo de nombre-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nombre Completo"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                />
+            <EditText
+                android:id="@+id/etfullNombre"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:hint="Nombre completo"
+                android:gravity="center"
+                android:inputType="textPersonName"
+                android:drawableStart="@drawable/baseline_person_24"
+                />
+
+            <!--Campo de email-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Correo Electrónico"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                />
+            <EditText
+                android:id="@+id/etemail"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:hint="Correo Electrónico"
+                android:gravity="center"
+                android:inputType="textEmailAddress"
+                android:drawableStart="@drawable/baseline_email_24"
+                />
+
+            <!--Campo de contaseña-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Contraseña"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                />
+            <EditText
+                android:id="@+id/etcontrasena"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:hint="Contraseña"
+                android:gravity="center"
+                android:inputType="textPassword"
+                android:drawableStart="@drawable/baseline_password_24"
+                />
+            <TextView
+                android:id="@+id/tvmensaje"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <!--Sesiones de los botones-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="60dp"
+                >
+
+                <Button
+                    android:id="@+id/btnguardar"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="Guardar"
+                    android:textAllCaps="false"
+                    android:backgroundTint="@color/green_btnGuardar"
+                    />
+                <Button
+                    android:id="@+id/btnbuscar"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="Buscar"
+                    android:textAllCaps="false"
+                    android:layout_marginLeft="10dp"
+                    android:backgroundTint="@color/gray_btnBuscar"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                >
+                <Button
+                    android:id="@+id/btnactualizar"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="Actualizar"
+                    android:textAllCaps="false"
+                    android:backgroundTint="@color/blue_btnActualizar"
+                    />
+                <Button
+                    android:id="@+id/btneliminar"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="Eliminiar"
+                    android:textAllCaps="false"
+                    android:layout_marginLeft="10dp"
+                    android:backgroundTint="@color/red_btnEliminar"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
