AppVentas/: Modificación en activity_main.xml y MainActivity.java

--- a/AppVentas/app/src/main/res/layout/activity_main.xml
+++ b/AppVentas/app/src/main/res/layout/activity_main.xml
@@ -109,7 +109,9 @@
             <TextView
                 android:id="@+id/tvmensaje"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="25dp"
+                android:gravity="center"/>
 
             <!--Sesiones de los botones-->
             <LinearLayout
