--- a/AppVentas/app/src/main/res/values/colors.xml
+++ b/AppVentas/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="backgroundDefine">#FFFBF2</color>
+    <color name="backgroundDefine">#FFE69A</color>
     <color name="colorTiltle">#001E75</color>
     <color name="green_btnGuardar">#1E6E1E</color>
     <color name="gray_btnBuscar">#575757</color>
