--- a/CrudProductos/app/src/main/res/layout/activity_main.xml
+++ b/CrudProductos/app/src/main/res/layout/activity_main.xml
@@ -135,8 +135,50 @@
                     android:id="@+id/tvValorIva"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="20dp">
+                    android:textSize="30dp">
                 </TextView>
+            </LinearLayout>
+
+            <!--Botones-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+                <Button
+                    android:id="@+id/btnGuardar"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="Guardar"
+                    android:textAllCaps="false"
+                    android:layout_marginRight="10dp"
+                    />
+                <Button
+                    android:id="@+id/btnBuscar"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="Buscar"
+                    android:textAllCaps="false"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+                <Button
+                    android:id="@+id/btnActualizar"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="Actualizar"
+                    android:textAllCaps="false"
+                    android:layout_marginRight="10dp"
+                    />
+                <Button
+                    android:id="@+id/btnEliminar"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:text="Eliminar"
+                    android:textAllCaps="false"
+                    />
             </LinearLayout>
 
 
