--- a/AppVentas/app/src/main/res/layout/activity_main.xml
+++ b/AppVentas/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
                 android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="@color/titleform"
                 />
             <EditText
                 android:id="@+id/etident"
@@ -42,6 +42,7 @@
                 android:layout_gravity="center"
                 android:hint="Identifiación"
                 android:gravity="center"
+                android:textColor="@color/black"
                 />
 
             <!--Campo de nombre-->
@@ -52,7 +53,7 @@
                 android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="@color/titleform"
                 />
             <EditText
                 android:id="@+id/etfullNombre"
@@ -61,6 +62,7 @@
                 android:layout_gravity="center"
                 android:hint="Nombre completo"
                 android:gravity="center"
+                android:textColor="@color/black"
                 android:inputType="textPersonName"
                 android:drawableStart="@drawable/baseline_person_24"
                 />
@@ -73,7 +75,7 @@
                 android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="@color/titleform"
                 />
             <EditText
                 android:id="@+id/etemail"
@@ -82,6 +84,7 @@
                 android:layout_gravity="center"
                 android:hint="Correo Electrónico"
                 android:gravity="center"
+                android:textColor="@color/black"
                 android:inputType="textEmailAddress"
                 android:drawableStart="@drawable/baseline_email_24"
                 />
@@ -94,7 +97,7 @@
                 android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="@color/titleform"
                 />
             <EditText
                 android:id="@+id/etcontrasena"
@@ -103,6 +106,7 @@
                 android:layout_gravity="center"
                 android:hint="Contraseña"
                 android:gravity="center"
+                android:textColor="@color/black"
                 android:inputType="textPassword"
                 android:drawableStart="@drawable/baseline_password_24"
                 />
