--- a/AppVentas/app/src/main/res/values/colors.xml
+++ b/AppVentas/app/src/main/res/values/colors.xml
@@ -7,10 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="backgroundDefine">#F6DE96</color>
+    <color name="backgroundDefine">#536DFE</color>
     <color name="colorTiltle">#001E75</color>
-    <color name="green_btnGuardar">#1E6E1E</color>
-    <color name="gray_btnBuscar">#575757</color>
-    <color name="blue_btnActualizar">#0D55CC</color>
-    <color name="red_btnEliminar">#FF2525</color>
+    <color name="titleform">#00013C</color>
+    <color name="green_btnGuardar">#006D00</color>
+    <color name="gray_btnBuscar">#616161</color>
+    <color name="blue_btnActualizar">#002055</color>
+    <color name="red_btnEliminar">#750000</color>
 </resources>
