Consecionario/: Modificación en FacturasActivity.java y activity_facturas.xml

--- a/Semestre_3/Concesionario/app/src/main/res/layout/activity_facturas.xml
+++ b/Semestre_3/Concesionario/app/src/main/res/layout/activity_facturas.xml
@@ -184,6 +184,7 @@
             android:id="@+id/btadicionar"
             android:layout_width="95dp"
             android:layout_height="55dp"
+            android:onClick="Adicionar"
             android:layout_weight="1"
             android:text="Adicionar"
             android:textSize="25dp" />
