Se agregó los recursos faltantes

--- a/Semestre_3/UniversidadApp/app/src/main/res/layout/activity_main.xml
+++ b/Semestre_3/UniversidadApp/app/src/main/res/layout/activity_main.xml
@@ -177,4 +177,10 @@
             android:text="Regresar"
             android:onClick="Regresar"/>
     </LinearLayout>
+
+    <Button
+        android:layout_width="370dp"
+        android:layout_height="55dp"
+
+        />
 </LinearLayout>
