--- a/Semestre_3/UniversidadApp/app/src/main/res/layout/activity_login.xml
+++ b/Semestre_3/UniversidadApp/app/src/main/res/layout/activity_login.xml
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Ingresar"
+        android:onClick="Ingresar"
         />
 
 
