--- a/Semestre_3/UniversidadApp/app/src/main/res/layout/activity_ingreso.xml
+++ b/Semestre_3/UniversidadApp/app/src/main/res/layout/activity_ingreso.xml
@@ -29,4 +29,16 @@
         android:text="Materias"
         android:onClick="Materia"
         />
+
+    <Button
+        android:id="@+id/btmatricula"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:textAllCaps="false"
+        android:text="Matricula"
+        android:onClick="Matricula"
+        />
 </LinearLayout>
