--- a/Semestre_3/UniversidadApp/app/src/main/res/layout/activity_matricula.xml
+++ b/Semestre_3/UniversidadApp/app/src/main/res/layout/activity_matricula.xml
@@ -153,7 +153,7 @@
                 android:layout_marginLeft="7dp"
                 android:layout_weight="1"
                 android:text="Buscar"
-                android:onClick="Consultar"/>
+                android:onClick="ConsultarMateria"/>
         </LinearLayout>
 
         <LinearLayout
