UniversidadApp/: Se terminó la actividad de login y sus funcionamiento

--- a/Semestre_3/UniversidadApp/app/src/main/res/layout/activity_login.xml
+++ b/Semestre_3/UniversidadApp/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:inputType="textPassword"
-        android:hint="Usuario"
+        android:hint="Contraseña"
         />
 
     <Button
